# SMOLPy

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
examples/: README.md  example.py  example_10_clients.py  example_12_clients.py  example_20_clients.py  example_file_transfer.py  example_mqtt.py  example_staggered_transfer.py  example_two_tier.py
src/smolpy/: __init__.py  cli.py
src/smolpy/dsl/: __init__.py  adapter.py  hub.py  link.py  mqtt_broker.py  network.py  node.py  observation.py  switch.py
src/smolpy/sim/: engine.py
src/smolpy/viz/: dashboard.py  text_dashboard.py
tests/: test_dsl.py  test_simulation.py
